# opengl-text-rendering

./: CMakeLists.txt  README.md
_cmake/: freetype.cmake  glfw.cmake  glm.cmake
resources/shaders/: text.fs  text.vs
src/: glad.c  main.cpp
